@@ -28,6 +28,7 @@ class File(OSFCore):
         self._endpoint = self._get_attribute(file, 'links', 'self')
         self._upload_url = self._get_attribute(file, 'links', 'upload')
         self._download_url = self._upload_url
+        self._html_url = self._get_attribute(file, 'links', 'html')
         self._delete_url = self._get_attribute(file, 'links', 'delete')
         self.osf_path = self._get_attribute(file, 'attributes', 'path')
         self.path = self._get_attribute(file,
